welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: class Array takes type parameters
def colonne(decalage:Int, motif:Array) {
                                ^Array2:1: error: class Array takes type parameters
def colonne(decalage:Int, motif:Array) {
                                ^